# StuGPAManager

./: CMakeLists.txt  CStudent.cpp  CStudent.h  FStudent.cpp  FStudent.h  GStudent.cpp  GStudent.h  Report.cpp  Report.h  Student.cpp  Student.h  main.cpp
VisualWindows/: CStudentScore.cpp  CStudentScore.h  FStudentScore.cpp  FStudentScore.h  GStudentScore.cpp  GStudentScore.h  InsertDialog.cpp  InsertDialog.h  Menu.cpp  Menu.h  Menu.ui
